update rendy
